--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -51,7 +51,7 @@
                         <button class="btn btn-icon command-delete" ng-click="confirmationDelete(reception.Id)">
                             <span class="md md-delete"></span>
                         </button>
-                        <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(reception.Folio)">
+                        <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)">
                             <span class="md md-view-module"></span>
                         </button>
                         <button class="btn btn-icon command-edit" ng-click="redirectAddRemission(reception)">
