Se agrego muestreo. -add -update -manage -delete -+VALIDACIONES

--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -63,6 +63,9 @@
                         <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)">
                                 <span class="md md-assignment"></span>
                             </button>
+                        <button ng-show="{{grill.Sampling.SampleWeight}} == null" class="btn btn-icon command-add" ng-click="redirectAddSampling(grill.Id)">
+                            <span class="md md-description"></span>
+                        </button>
                     </td>
                     <td ng-show="IsGrillToReception">
                         <div class="toggle-switch">
@@ -75,3 +78,4 @@
         </table>
     </div>
 </div>
+
