Modificaron y agregaron: [Validaciones]
Smapling
Grill
reception
remission

--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -54,7 +54,7 @@
                         <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)">
                             <span class="md md-view-module"></span>
                         </button>
-                        <button class="btn btn-icon command-edit" ng-click="redirectAddRemission(reception)">
+                        <button class="btn btn-icon command-edit" ng-click="redirectAddRemission(reception.Id, reception.Folio)">
                             <span class="md md-description"></span>
                         </button>
                     </td>
