--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -54,10 +54,10 @@
                     <td>{{grill.Sampling.TotalWeightOfEdibleNuts}}</td>
                     <td>{{grill.Status}}</td>
                     <td ng-hide="IsGrillToReception">
-                        <button class="btn btn-icon command-edit">
+                        <button class="btn btn-icon command-edit" ng-click="redirectUpdate(grill.Id, grill)">
                                 <span class="md md-edit"></span>
                             </button>
-                        <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
+                        <button class="btn btn-icon command-delete" ng-click="confirmationDelete(grill.Id)">
                                 <span class="md md-delete"></span>
                             </button>
                         <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)">
