--- a/app/views/reception/receptionAdd.html
+++ b/app/views/reception/receptionAdd.html
@@ -26,6 +26,21 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="EntryDate" class="col-sm-2 control-label">Fecha</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line">
+                            <input type="text" required disabled class="form-control input-sm" id="EntryDate" placeholder="fecha de captura" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#"><i class="md md-event"></i></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <datetimepicker data-ng-model="data.dateDropDownLink" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="form-group">
                     <label for="fieldName" class="col-sm-2 control-label">Nombre del Campo</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
@@ -84,7 +99,7 @@
                     <label for="observations" class="col-sm-2 control-label">Observaciones</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <textarea class="form-control auto-size" placeholder="observaciones..." name="Observations" data-ng-model="reception.Observations"></textarea>
+                            <textarea required class="form-control auto-size" placeholder="observaciones..." name="Observations" data-ng-model="reception.Observations"></textarea>
                             <small class="help-block has-error" style="color:red" ng-show="!receptionForm.$pristine && receptionForm.Observations.$error.required">Observaciones son requerido.</small>
                         </div>
                     </div>
