--- a/app/views/sampling/samplingUpdate.html
+++ b/app/views/sampling/samplingUpdate.html
@@ -11,7 +11,7 @@
                     <label for="date" class="col-sm-2 control-label">Fecha</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="datetime" class="form-control input-sm" id="samplingDate" placeholder="fecha de captura" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
+                            <input type="text" disabled required class="form-control input-sm" id="samplingDate" placeholder="fecha de captura" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
                             <div class="dropdown">
                                 <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#"><i class="md md-event"></i></a>
                                 <ul class="dropdown-menu" role="menu">
@@ -45,7 +45,7 @@
                     <label for="WalnutNumber" class="col-sm-2 control-label">Número de nueces</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="0" class="form-control input-sm" id="WalnutNumber" name="WalnutNumber" placeholder="Número de nueces" data-ng-model="sampling.WalnutNumber">
+                            <input type="number" min="0" required class="form-control input-sm" id="WalnutNumber" name="WalnutNumber" placeholder="Número de nueces" data-ng-model="sampling.WalnutNumber">
                             <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.WalnutNumber.$error.number">Tiene que ser un valor númerico.</small>
                             <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.WalnutNumber.$error.required">Número de nueces son requerido.</small>
                         </div>
@@ -55,7 +55,7 @@
                     <label for="Performance" class="col-sm-2 control-label">Rendimiento</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="number" min="0" step="any" ng-class="{error: !samplingForm.$pristine && samplingForm.Performance.$error.required}" class="form-control input-sm" name="Performance" id="Performance" placeholder="Rendimiento" data-ng-model="sampling.Performance">
+                            <input required type="number"  min="0" step="any" ng-class="{error: !samplingForm.$pristine && samplingForm.Performance.$error.required}" class="form-control input-sm" name="Performance" id="Performance" placeholder="Rendimiento" data-ng-model="sampling.Performance">
                             <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.Performance.$error.number">Tiene que ser un valor númerico.</small>
                             <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.Performance.$error.required">Rendimiento es requerido.</small>
                         </div>
