cambios en humedad

--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -53,6 +53,8 @@
                         <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
                         <span class="md md-delete"></span>
                     </button>
+                    <button class="btn btn-icon command-edit">
+                        <span class="md md-cloud-queue" ng-click="redirectAddHumidity(reception.Id, reception.CylinderId)"
                     </td>
                 </tr>
             </tbody>
