--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -1,2 +1,8 @@
-<p>Grill Issue
-</p>
+<div class="animated bounceInRight">
+    <div class="card">
+        <div class="card-header">
+            <h2>Salida de Parrillas</h2>
+        </div>
+        
+    </div>
+</div>
