se agregaron notificaciones emergentes en parrillas

--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -68,7 +68,7 @@
                         <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)">
                                 <span class="md md-assignment"></span>
                             </button>
-                        <button ng-show="{{grill.Sampling.SampleWeight}} == null" class="btn btn-icon command-add" ng-click="redirectAddSampling(grill.Id)">
+                        <button ng-show="{{grill.Sampling.SampleWeight}} == null" class="btn btn-icon command-edit" ng-click="redirectAddSampling(grill.Id)">
                             <span class="md md-description"></span>
                         </button>
                     </td>
