formato de selección

--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -64,8 +64,11 @@
                             <span class="md md-description"></span>
                         </button>
                         <button class="btn btn-icon command-edit" ng-click="redirectAddHumidity(reception.Id, reception.Cylinder)">
-                        <span class="md md-cloud-queue"></span>
-                    </button>
+                            <span class="md md-cloud-queue"></span>
+                        </button>
+                        <button class="btn btn-icon command-edit" ng-click="redirectAddSelection()">
+                            <span class="md md-done-all"></span>
+                        </button>
                     </td>
                     <td ng-show="IsGrillToReception">
                         <div class="toggle-switch">
