--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -10,9 +10,10 @@
                     <div class="col-sm-10">
                         <div class="fg-line disabled">
                             <div class="fg-line select">
-                                <select class="form-control" ng-model="grill.Producer">
-                            <option ng-repeat="producer in producers" ng-selected="grill.Producer == producer.ProducerName" value="{{producer.ProducerName}}">{{producer.ProducerName}}</option>
-                        </select>
+                                <!--<select class="form-control" ng-init="grill.Producer = producers[0]" ng-model="grill.Producer">
+                                    <option ng-repeat="producer in producers" ng-selected="grill.Producer == producer.ProducerName" value="{{producer.ProducerName}}">{{producer.ProducerName}}</option>
+                                </select>-->
+                                <select class="form-control" ng-init="grill.Producer = producers[0]" ng-model="grill.Producer" ng-options="producer.ProducerName for producer in producers"></select>
                             </div>
                         </div>
                     </div>
@@ -79,15 +80,14 @@
                 <div class="form-group">
                     <label for="size" class="col-sm-2 control-label">Tamaño</label>
                     <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="size" name="Size" placeholder="tamaño" data-ng-model="grill.Size">
-                            <small class="help-block has-error" style="color:red" ng-show="!grillForm.$pristine && grillForm.Size.$error.required">El Campo es requerido.</small>
+                        <div class="fg-line select">
+                            <select class="form-control" ng-init="grill.Size = sizes[0]" ng-model="grill.Size" ng-options="size.Name for size in sizes"></select>
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group marginTop">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveGrill()" ng-disabled="!receptionForm.$valid">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveGrill()" ng-disabled="!grillForm.$valid">Guardar</button>
                     </div>
                 </div>
                 <div class="form-group">
