Se cambio todo a toast

--- a/app/views/humidity.html
+++ b/app/views/humidity.html
@@ -65,7 +65,7 @@
                     <td>{{humidity.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                     <td>{{humidity.HumidityPercentage}}</td>
                     <td>
-                    <button class="btn btn-icon command-delete" ng-click="deleteHumidity(humidity.HumidityId)">
+                    <button class="btn btn-icon command-delete" ng-click="confirmationDelete(humidity.HumidityId)">
                         <span class="md md-delete"></span>
                     </button>
                     </td>
